--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,4 @@
 @import url("https://www.w3schools.com/w3css/4/w3.css");
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600");
 @import "index.css";
-@import "modal.css";
-@import "sidenav.css";
+@import "ios-colors.css";
