--- a/css/index.css
+++ b/css/index.css
@@ -2,28 +2,25 @@
 
 #msg {
     visibility: hidden;
-    color: red;
+    color: #5AC8FA;
     font-weight: bold;
-    font-size: 22px;
-    font-family: Verdana;
+    font-size: 18px;
 }
 
-button {
+.button {
     padding: 5px 10px;
-    border: 1px solid grey;
     font-size: 18px;
-    background: white;
+    color: #007AFF;
 }
 
 .audio-controls {
     display: flex;
     align-items: center;
-    padding-top: 20px;
     justify-content: center;
 }
 
 .audio-controls button {
-    margin: 0px 5px;
+    margin: 0 5px;
 }
 
 canvas {
@@ -32,8 +29,9 @@ canvas {
 }
 
 select {
-    height: 25px;
-    margin: 0px 5px;
+    padding: 10px;
+    border: 0;
+    border-radius: 32px;
 }
 
 a {
@@ -62,6 +60,8 @@ td select {
     height: 30px;
     margin: 0;
     padding: 2px 8px;
+    border: 0;
+    border-radius: 4px
 }
 
 td:last-child .button {
@@ -107,10 +107,9 @@ table th, table td {
 
 /* Style for the scrollable divs */
 .scrollable {
-    max-height: 300px; /* Set a maximum height for scrollable area */
+    max-height: 250px; /* Set a maximum height for scrollable area */
     width: 100%;
     overflow-y: auto; /* Enable vertical scrolling */
-    border: 1px solid #ccc; /* Add a border for clarity */
 }
 
 .scrollable a {
@@ -132,6 +131,10 @@ body, h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat", sans-serif
 }
 
+header h3 {
+    font-weight: 600;
+}
+
 th {
     font-weight: 500;
 }
@@ -142,9 +145,35 @@ hr {
     border-top: 1px solid #ccc;
 }
 
-.w3-button {
-    border-radius:32px;
+textarea {
+    padding: 15px;
+    line-height: 1.75;
+    max-height: 325px;
+}
+
+#nav-bar .w3-button {
+    color: #ffffff;
+    background-color: transparent;
+}
+
+#select-patient .w3-button {
+    border-radius: 32px;
     border: 1px solid #007AFF;
+    background-color: transparent;
+    color: #007AFF;
+}
+
+#select-patient-dropdown .w3-button {
+    border-radius: 32px;
+    border: 0;
+    background-color: #ffffff;
+    color: #007AFF;
+}
+
+.w3-button {
+    border-radius: 32px;
+    border: 0;
+    background-color: #ffffff;
     color: #007AFF;
 }
 
@@ -161,14 +190,18 @@ hr {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(255, 255, 255, 0.7);
     z-index: 2;
 }
 
 #analysis-bar {
     height: 24px;
     width: 0;
-    background: lightgrey;
+    background: #5AC8FA;
+}
+
+.w3-modal {
+    background: rgba(255, 255, 255, 0.7);
 }
 
 
